--- a/bancos.html
+++ b/bancos.html
@@ -63,14 +63,15 @@
             </div>
         </section>
         <section class="banco">
-            <a href="https://cuentaspositivas.bancobica.com.ar/?gad_source=1&gad_campaignid=21858740783&gclid=Cj0KCQjwkILEBhDeARIsAL--pjyklt-O22q7YRdtda3EfRbYIdDqZKAQE5_eIPChQDJ14OkinrBg7kQaAlDbEALw_wcB" target="_blank"><img src="../assets/img/1-bancos/banco-bica.png" alt="icono-banco"></a>
+            <a href="https://cuentaspositivas.bancobica.com.ar/?gad_source=1&gad_campaignid=21858740783&gclid=Cj0KCQjwkILEBhDeARIsAL--pjyklt-O22q7YRdtda3EfRbYIdDqZKAQE5_eIPChQDJ14OkinrBg7kQaAlDbEALw_wcB" target="_blank">
+                <img src="assets/img/1-bancos/banco-bica.png" alt="icono-banco"></a>
             <h3>Banco BICA</h3>
             <div class="goku">
                 <p>33.00% TNA</p>
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.bancochubut.com.ar/webinstitucional/" target="_blank"><img src="../assets/img/1-bancos/banco-chubut.png" alt="icono-banco"></a>
+            <a href="https://www.bancochubut.com.ar/webinstitucional/" target="_blank"><img src="assets/img/1-bancos/banco-chubut.png" alt="icono-banco"></a>
             <h3>Banco del Chubut</h3>
             <div class="goku">
                 <p>31.50% TNA</p>
@@ -84,14 +85,14 @@
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.bancoprovincia.com.ar/home/" target="_blank"><img src="../assets/img/1-bancos/banco-provincia.png" alt="icono-banco"></a>
+            <a href="https://www.bancoprovincia.com.ar/home/" target="_blank"><img src="assets/img/1-bancos/banco-provincia.png" alt="icono-banco"></a>
             <h3>Banco Provincia</h3>
             <div class="goku">
                 <p>29.50% TNA</p>
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.galicia.ar/personas?srsltid=AfmBOoqhijZWU969UGsZoBIu7O0-fc_3At5rNZ-F_3VpYbpgdcGzqeyv" target="_blank"><img src="../assets/img/1-bancos/banco-galicia.jpg" alt="icono-banco"></a>
+            <a href="https://www.galicia.ar/personas?srsltid=AfmBOoqhijZWU969UGsZoBIu7O0-fc_3At5rNZ-F_3VpYbpgdcGzqeyv" target="_blank"><img src="assets/img/1-bancos/banco-galicia.jpg" alt="icono-banco"></a>
             <h3>Banco Galicia</h3>
             <div class="goku">
                 <p>28.00% TNA</p>
@@ -157,4 +158,5 @@
     </section>
     </footer>
 </body>
+
 </html>
