--- a/mercado.html
+++ b/mercado.html
@@ -14,7 +14,7 @@
                  <!-- Otros ítems del menú -->
                 <li class="logo">
                     <a href="./index.html">
-                    <img src="../assets/img/App/icono-app.png" alt="icono-app">
+                    <img src="assets/img/App/icono-app.png" alt="icono-app">
                     </a>
                 </li>
                 <li class="hover"><a href="./bancos.html">Bancos</a></li>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="banco">
-            <a href="https://cocos.capital/?gad_source=1&gad_campaignid=20977019754&gclid=Cj0KCQjwkILEBhDeARIsAL--pjwNJpqF48m-jENvgEaWRwHmoWB5KmOTbJ5YnQTX2bBFV6M3a3Q2puoaAkfsEALw_wcB" target="_blank"><img src="../assets/img/3-mercado-usd/app-cocoscapital.jpg" alt="icono-banco"></a>
+            <a href="https://cocos.capital/?gad_source=1&gad_campaignid=20977019754&gclid=Cj0KCQjwkILEBhDeARIsAL--pjwNJpqF48m-jENvgEaWRwHmoWB5KmOTbJ5YnQTX2bBFV6M3a3Q2puoaAkfsEALw_wcB" target="_blank"><img src="assets/img/3-mercado-usd/app-cocoscapital.jpg" alt="icono-banco"></a>
             <h3>Cocos Capital</h3>
             <div class="usd">
                 <div class="compra">
@@ -190,7 +190,7 @@
             </div>
         </div>
         <div class="banco">
-            <a href="https://www.astropay.com/es?gad_source=1&gad_campaignid=21762653730&gclid=Cj0KCQjwkILEBhDeARIsAL--pjz4YHZaQPtR5Z_rrTRUkg2QC9O5YNMdznL68BPwbB2cuTOFkxopgFgaAq-QEALw_wcB" target="_blank"><img src="../assets/img/3-mercado-usd/bv-astropay.png" alt="icono-banco"></a>
+            <a href="https://www.astropay.com/es?gad_source=1&gad_campaignid=21762653730&gclid=Cj0KCQjwkILEBhDeARIsAL--pjz4YHZaQPtR5Z_rrTRUkg2QC9O5YNMdznL68BPwbB2cuTOFkxopgFgaAq-QEALw_wcB" target="_blank"><img src="assets/img/3-mercado-usd/bv-astropay.png" alt="icono-banco"></a>
             <h3>Astropay</h3>
             <div class="usd">
                 <div class="compra">
@@ -263,4 +263,5 @@
     </div>
     </footer>
 </body>
+
 </html>
