--- a/billeteras.html
+++ b/billeteras.html
@@ -14,7 +14,7 @@
                  <!-- Otros ítems del menú -->
                 <li class="logo">
                     <a href="./index.html">
-                    <img src="../assets/img/App/icono-app.png" alt="icono-app">
+                    <img src="assets/img/App/icono-app.png" alt="icono-app">
                     </a>
                 </li>
                 <li class="hover"><a href="./bancos.html">Bancos</a></li>
@@ -90,7 +90,7 @@
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.astropay.com/es?gad_source=1&gad_campaignid=21762653730&gclid=Cj0KCQjwkILEBhDeARIsAL--pjz4YHZaQPtR5Z_rrTRUkg2QC9O5YNMdznL68BPwbB2cuTOFkxopgFgaAq-QEALw_wcB" target="_blank"><img src="../assets/img/2-billeteras-virtuales/bv-astropay.png" alt="icono-banco"></a>
+            <a href="https://www.astropay.com/es?gad_source=1&gad_campaignid=21762653730&gclid=Cj0KCQjwkILEBhDeARIsAL--pjz4YHZaQPtR5Z_rrTRUkg2QC9O5YNMdznL68BPwbB2cuTOFkxopgFgaAq-QEALw_wcB" target="_blank"><img src="assets/img/2-billeteras-virtuales/bv-astropay.png" alt="icono-banco"></a>
             <h3>Astropay</h3>
             <div class="goku">
                 <p>22.00% TNA</p>
@@ -156,4 +156,5 @@
     </section>
     </footer>
 </body>
+
 </html>
