--- a/plazo-fijo.html
+++ b/plazo-fijo.html
@@ -58,21 +58,21 @@
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.bancodelsol.com/?gad_source=1&gad_campaignid=11135102631&gclid=Cj0KCQjwkILEBhDeARIsAL--pjzzVLAGrHmc3eHvC2N0QcqNSHjBTtIdsZqP6Uy1EFULnVqCfVAH7-IaAj0HEALw_wcB" target="_blank"><img src="../assets/img/4-Plazo-Fijo/app-sol.png" alt="icono-banco"></a>
+            <a href="https://www.bancodelsol.com/?gad_source=1&gad_campaignid=11135102631&gclid=Cj0KCQjwkILEBhDeARIsAL--pjzzVLAGrHmc3eHvC2N0QcqNSHjBTtIdsZqP6Uy1EFULnVqCfVAH7-IaAj0HEALw_wcB" target="_blank"><img src="assets/img/4-Plazo-Fijo/app-sol.png" alt="icono-banco"></a>
             <h3>Banco del Sol</h3>
             <div class="goku">
                 <p>35.00% TNA</p>
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.galicia.ar/personas?srsltid=AfmBOopgxb1R7RqA1JtqykOJt7nc2mQWRe67W8-3fPiypVkMsZoVZ2AT" target="_blank"><img src="../assets/img/4-Plazo-Fijo/banco-galicia.jpg" alt="icono-banco"></a>
+            <a href="https://www.galicia.ar/personas?srsltid=AfmBOopgxb1R7RqA1JtqykOJt7nc2mQWRe67W8-3fPiypVkMsZoVZ2AT" target="_blank"><img src="assets/img/4-Plazo-Fijo/banco-galicia.jpg" alt="icono-banco"></a>
             <h3>Banco Galicia</h3>
             <div class="goku">
                 <p>32.50% TNA</p>
             </div>
         </section>
         <section class="banco">
-            <a href="https://www.bancoprovincia.com.ar/home/" target="_blank"><img src="../assets/img/4-Plazo-Fijo/banco-provincia.png" alt="icono-banco"></a>
+            <a href="https://www.bancoprovincia.com.ar/home/" target="_blank"><img src="assets/img/4-Plazo-Fijo/banco-provincia.png" alt="icono-banco"></a>
             <h3>Banco Provincia</h3>
             <div class="goku">
                 <p>30.50% TNA</p>
@@ -145,5 +145,6 @@
         </section>
     </footer>
 </body>
+
 
 </html>
